# azalea

./: .gitignore  .gitpod.yml  CHANGELOG.md  CNAME  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  block_lookup.diff  flake.nix  login.txt  registry.json  rust-toolchain  rust-toolchain.toml  rustfmt.toml  typos.toml
azalea/: Cargo.toml  README.md  build.rs
azalea-auth/: Cargo.toml  README.md
azalea-auth/examples/: auth.rs  auth_manual.rs  certificates.rs
azalea-auth/src/: account.rs  auth.rs  cache.rs  certs.rs  encryption.rs  game_profile.rs  lib.rs  microsoft.rs  offline.rs  sessionserver.rs
azalea-block/: .gitignore  Cargo.toml  README.md
azalea-block/azalea-block-macros/: Cargo.toml
azalea-block/benches/: block.rs
azalea-block/block-macros/: Cargo.toml
azalea-block/src/: behavior.rs  block_state.rs  blocks.rs  fluid_state.rs  generated.rs  lib.rs  properties.rs  range.rs
azalea-brigadier/: Cargo.toml  README.md
azalea-brigadier/src/: command.rs  command_dispatcher.rs  context.rs  dispatcher.rs  immutable_string_reader.rs  lib.rs  main.rs  message.rs  modifier.rs  parse_results.rs  parsers.rs  redirect_modifier.rs  result_consumer.rs  single_redirect_modifier.rs  string_reader.rs  tree.rs
azalea-brigadier/tests/: bevy_app_usage.rs  command_dispatcher_test.rs  command_dispatcher_usages_test.rs  command_suggestions_test.rs  mod.rs  string_reader_test.rs
azalea-buf/: Cargo.toml  README.md
azalea-buf/azalea-buf-macros/: Cargo.toml  README.md
azalea-buf/buf-macros/: Cargo.toml
azalea-buf/src/: checksum.rs  definitions.rs  lib.rs  read.rs  serializable_uuid.rs  write.rs
azalea-chat/: Cargo.toml  README.md
azalea-chat/src/: base_component.rs  click_event.rs  component.rs  events.rs  hover_event.rs  lib.rs  numbers.rs  style.rs  text_component.rs  translatable_component.rs
azalea-chat/tests/: integration_test.rs
azalea-client/: Cargo.toml  README.md  build.rs
azalea-client/examples/: echo.rs
azalea-client/src/: account.rs  attack.rs  chat.rs  chunk_batching.rs  chunks.rs  client.rs  configuration.rs  connect.rs  disconnect.rs  entity.rs  entity_query.rs  events.rs  get_mc_dir.rs  handler_events.rs  interact.rs  inventory.rs  inventory_plugin.rs  lib.rs  local_player.rs  mining.rs  movement.rs  packet_handling.rs  ping.rs  player.rs  plugins.rs  raw_connection.rs  received_registries.rs  respawn.rs  send_client_end.rs  task_pool.rs  test_simulation.rs
azalea-client/tests/: change_dimension_to_nether_and_back.rs  clamp_look_direction_on_teleport.rs  client_disconnect.rs  close_open_container.rs  correct_movement.rs  correct_sneak_movement.rs  correct_sprint_sneak_movement.rs  despawn_entities_when_changing_dimension.rs  enchantments.rs  fast_login.rs  login_to_dimension_with_same_name.rs  main.rs  mine_block_rollback.rs  mine_block_timing.rs  mine_block_timing_hand.rs  mine_block_without_rollback.rs  move_and_despawn_entity.rs  move_despawned_entity.rs  packet_order.rs  packet_order_set_carried_item.rs  receive_spawn_entity_and_start_config_packet.rs  receive_start_config_packet.rs  reply_to_ping_with_pong.rs  set_health_before_login.rs  simulation.rs  teleport_movement.rs  ticks_alive.rs
azalea-core/: Cargo.toml  README.md
azalea-core/src/: aabb.rs  attribute_modifier_operation.rs  bitset.rs  block_hit_result.rs  block_pos.rs  checksum.rs  codec_utils.rs  color.rs  cursor3d.rs  data_registry.rs  delta.rs  difficulty.rs  direction.rs  entity_id.rs  filterable.rs  game_type.rs  heightmap_kind.rs  hit_result.rs  identifier.rs  lib.rs  math.rs  objectives.rs  particle.rs  position.rs  registries.rs  registry_holder.rs  resource_location.rs  serializable_uuid.rs  slot.rs  sound.rs  tick.rs  tier.rs
azalea-crypto/: Cargo.toml  README.md
azalea-crypto/benches/: my_benchmark.rs
azalea-crypto/src/: lib.rs  offline.rs  signing.rs
azalea-ecs/: Cargo.toml
azalea-ecs/azalea-ecs-macros/: Cargo.toml
azalea-ecs/src/: lib.rs
azalea-entity/: Cargo.toml  README.md
azalea-entity/src/: attributes.rs  data.rs  dimensions.rs  effects.rs  enchantments.rs  info.rs  inventory.rs  lib.rs  metadata.rs  mining.rs  particle.rs  systems.rs  vec_delta_codec.rs
azalea-graphics/: Cargo.toml  build.rs
azalea-graphics/examples/: renderbot.rs  testbot.rs
azalea-graphics/shaders/: block.frag  block.vert  egui.frag  egui.vert  triangle.frag  triangle.vert  water.frag  water.vert
azalea-graphics/src/: lib.rs  plugin.rs
azalea-inventory/: Cargo.toml  README.md
azalea-inventory/azalea-inventory-macros/: Cargo.toml
azalea-inventory/src/: components.rs  lib.rs  operations.rs  slot.rs
azalea-inventory/tests/: components.rs
azalea-language/: Cargo.toml  README.md
azalea-language/src/: en_us.json  lib.rs
azalea-nbt/: Cargo.toml  README.md
azalea-nbt/benches/: compare.rs  comparison.rs  my_benchmark.rs  nbt.rs
azalea-nbt/src/: decode.rs  encode.rs  error.rs  lib.rs  registry.rs  tag.rs
azalea-nbt/tests/: decode.rs  inttest1023.nbt  inttest16.nbt  inttest3.nbt  stringtest.nbt  tests.rs
azalea-pathfinder/: Cargo.toml  README.md
azalea-pathfinder/src/: dstarlite.rs  lib.rs  moves.rs  mtdstarlite.rs
azalea-physics/: Cargo.toml  README.md
azalea-physics/src/: aabb.rs  client_movement.rs  clip.rs  dimension_collisions.rs  discrete_voxel_shape.rs  fluids.rs  lib.rs  local_player.rs  shape.rs  travel.rs
azalea-physics/tests/: physics.rs
azalea-protocol/: Cargo.toml  README.md  build.rs
azalea-protocol/azalea-protocol-macros/: Cargo.toml
azalea-protocol/benches/: read.rs
azalea-protocol/examples/: handshake_proxy.rs  packet_logger.rs  proxy.rs
azalea-protocol/fuzz/: .gitignore  Cargo.toml  README.md
azalea-protocol/packet-macros/: Cargo.toml
azalea-protocol/src/: address.rs  (+9 more)
azalea-registry/: Cargo.toml  README.md
azalea-world/: Cargo.toml  README.md
bot/: Cargo.toml
codegen/: .gitignore  README.md  azprotorefactor.py  burger.json  genassets.py  genblocks.py  genentities.py  genitemcomponents.py  genlanguage.py  genpackets.py  genregistries.py  migrate.py  newpacket.py  pyproject.toml
minecraft-protocol/: Cargo.toml
(+1071 files in other folders)
