[package]
description = "A port of Mojang's Authlib and launcher authentication."
edition = "2021"
license = "MIT"
name = "azalea-auth"
repository = "https://github.com/azalea-rs/azalea/tree/main/azalea-auth"
version = "0.9.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azalea-buf = { path = "../azalea-buf", version = "0.9.0" }
azalea-crypto = { path = "../azalea-crypto", version = "0.9.0" }
base64 = "0.22.1"
chrono = { version = "0.4.38", default-features = false, features = ["serde"] }
tracing = "0.1.41"
num-bigint = "0.4.6"
once_cell = "1.20.2"
reqwest = { version = "0.12.9", default-features = false, features = [
    "json",
    "rustls-tls",
] }
rsa = "0.9.7"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "1.0.69"
tokio = { version = "1.42.0", features = ["fs"] }
uuid = { version = "1.11.0", features = ["serde", "v3"] }
md-5 = "0.10.6"

[dev-dependencies]
env_logger = "0.11.5"
tokio = { version = "1.42.0", features = ["full"] }
