[package]
name = "azalea-auth"
description = "A port of Mojang's Authlib and launcher authentication."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
azalea-buf.workspace = true
azalea-crypto.workspace = true
base64.workspace = true
chrono = { workspace = true, features = ["serde"] }
indexmap.workspace = true
md-5.workspace = true
reqwest = { workspace = true, default-features = false, features = [
    "json",
    "rustls-tls",
] }
rsa.workspace = true
signature.workspace = true # TODO: Remove when rsa is fixed.
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs"] }
tracing.workspace = true
uuid = { workspace = true, features = ["serde", "v3"] }

[dev-dependencies]
env_logger.workspace = true
tokio = { workspace = true, features = ["full"] }
