[package]
name = "azalea-block"
description = "Representation of Minecraft block states."
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
azalea-block-macros = { path = "./azalea-block-macros", version = "0.11.0+mc1.21.4" }
azalea-buf = { path = "../azalea-buf", version = "0.11.0+mc1.21.4" }
azalea-registry = { path = "../azalea-registry", version = "0.11.0+mc1.21.4" }
