[package]
name = "azalea-block"
description = "Representation of Minecraft block states."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
azalea-block-macros.workspace = true
azalea-buf.workspace = true
azalea-registry.workspace = true

[lints]
workspace = true
