[package]
name = "azalea-brigadier"
description = "A port of Mojang's Brigadier command parsing and dispatching library."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dev-dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true

[dependencies]
azalea-buf = { workspace = true, optional = true }
azalea-chat = { workspace = true, optional = true }
parking_lot.workspace = true

[features]
azalea-buf = ["dep:azalea-buf", "dep:azalea-chat", "azalea-chat/azalea-buf"]

[lints]
workspace = true
