[package]
description = "Parse Minecraft chat messages."
edition = "2021"
license = "MIT"
name = "azalea-chat"
repository = "https://github.com/azalea-rs/azalea/tree/main/azalea-chat"
version = "0.10.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
simdnbt = ["dep:simdnbt"]
azalea-buf = ["dep:azalea-buf", "simdnbt"]
numbers = ["dep:azalea-registry", "dep:simdnbt"]

[dependencies]
azalea-buf = { path = "../azalea-buf", features = [
    "serde_json",
], version = "0.10.0", optional = true }
azalea-language = { path = "../azalea-language", version = "0.10.0" }
simdnbt = { version = "0.6", optional = true }
tracing = "0.1.40"
once_cell = "1.19.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0.120"
azalea-registry = { path = "../azalea-registry", version = "0.10.0", optional = true }
