[package]
name = "azalea-chat"
description = "Parse Minecraft chat messages."
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[features]
default = []
simdnbt = ["dep:simdnbt"]
azalea-buf = ["dep:azalea-buf", "simdnbt"]
numbers = ["dep:azalea-registry", "dep:simdnbt"]

[dependencies]
azalea-buf = { path = "../azalea-buf", version = "0.11.0", optional = true, features = [
    "serde_json",
] }
azalea-language = { path = "../azalea-language", version = "0.11.0" }
azalea-registry = { path = "../azalea-registry", version = "0.11.0", optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
simdnbt = { workspace = true, optional = true }
tracing = { workspace = true }
