[package]
name = "azalea-chat"
description = "Parse Minecraft chat messages."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
simdnbt = ["dep:simdnbt"]
azalea-buf = ["dep:azalea-buf", "simdnbt"]
numbers = ["dep:azalea-registry", "dep:simdnbt"]

[dependencies]
azalea-buf = { workspace = true, optional = true, features = ["serde_json"] }
azalea-language.workspace = true
azalea-registry = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
simdnbt = { workspace = true, optional = true }
tracing.workspace = true

[lints]
workspace = true
