[package]
name = "azalea-core"
description = "Miscellaneous things in Azalea."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
azalea-buf.workspace = true
azalea-registry.workspace = true
bevy_ecs = { workspace = true, optional = true }
nohash-hasher.workspace = true
num-traits.workspace = true
serde = { workspace = true, optional = true }
simdnbt.workspace = true
tracing.workspace = true
azalea-chat.workspace = true
indexmap.workspace = true

[features]
bevy_ecs = ["dep:bevy_ecs"]
serde = ["dep:serde"]
strict_registry = []
