[package]
name = "azalea-core"
description = "Miscellaneous things in Azalea."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
bevy_ecs = ["dep:bevy_ecs"]
strict_registry = []

[dependencies]
azalea-buf.workspace = true
azalea-chat.workspace = true
azalea-registry.workspace = true
bevy_ecs = { workspace = true, optional = true }
crc32c.workspace = true
indexmap.workspace = true
nohash-hasher.workspace = true
num-traits.workspace = true
serde.workspace = true
simdnbt.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[lints]
workspace = true
