[package]
name = "azalea-core"
description = "Miscellaneous things in Azalea."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
azalea-buf.workspace = true
azalea-registry.workspace = true
bevy_ecs = { workspace = true, optional = true }
nohash-hasher.workspace = true
num-traits.workspace = true
serde.workspace = true
simdnbt.workspace = true
tracing.workspace = true
azalea-chat.workspace = true
indexmap.workspace = true
crc32c.workspace = true
thiserror.workspace = true
uuid.workspace = true

[features]
bevy_ecs = ["dep:bevy_ecs"]
strict_registry = []

[lints]
workspace = true
