[package]
name = "azalea-crypto"
description = "Cryptography features used in Minecraft."
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[dependencies]
aes = { workspace = true }
azalea-buf = { path = "../azalea-buf", version = "0.11.0" }
cfb8 = { workspace = true }
num-bigint = { workspace = true }
rand = { workspace = true, features = ["getrandom"] }
rsa = { workspace = true, features = ["sha2"] }
rsa_public_encrypt_pkcs1 = { workspace = true }
sha-1 = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }

[[bench]]
harness = false
name = "my_benchmark"
