[package]
name = "azalea-crypto"
description = "Cryptography features used in Minecraft."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dev-dependencies]
criterion.workspace = true

[dependencies]
aes.workspace = true
azalea-buf = { workspace = true, optional = true }
cfb8.workspace = true
num-bigint.workspace = true
rand = { workspace = true, features = ["os_rng"] }
# TODO: Remove when rand is fixed.
rand_core.workspace = true
rsa = { workspace = true, features = ["sha2"] }
rsa_public_encrypt_pkcs1.workspace = true
sha1.workspace = true
sha2.workspace = true
uuid.workspace = true
md-5.workspace = true

[features]
signing = ["dep:azalea-buf"]

[[bench]]
harness = false
name = "my_benchmark"

[lints]
workspace = true
