[package]
edition = "2021"
name = "azalea-ecs"
version = "0.5.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azalea-ecs-macros = {path = "./azalea-ecs-macros", version = "^0.5.0"}
bevy_app = "0.9.1"
bevy_ecs = {version = "0.9.1", default-features = false}
iyes_loopless = "0.9.1"
tokio = {version = "1.25.0", features = ["time"]}
