[package]
name = "azalea-entity"
description = "Things related to Minecraft entities used by Azalea"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
azalea-auth.workspace = true
azalea-block.workspace = true
azalea-buf.workspace = true
azalea-chat = { workspace = true, features = ["azalea-buf"] }
azalea-core.workspace = true
azalea-inventory.workspace = true
azalea-registry.workspace = true
azalea-world.workspace = true
bevy_app.workspace = true
bevy_ecs.workspace = true
derive_more.workspace = true
enum-as-inner.workspace = true
nohash-hasher.workspace = true
parking_lot.workspace = true
simdnbt.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[lints]
workspace = true
