[package]
name = "azalea-graphics"
description = "Renderer for azalea"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ash = "0.38"
raw-window-handle = "0.6"
vk-mem = "0.5"
ash-window = "0.13"
log = "0.4"
winit = "0.30.12"
glam = {version = "0.30", features = ["serde"]}
crossbeam = "0.8.4"
parking_lot.workspace = true
azalea.path = "../azalea/"
azalea.default-features = false
azalea.features = [ "serde", "packet-event"]
walkdir = "2.5.0"
serde.workspace = true
serde_json.workspace = true
image = "0.25.6"
serde-tuple-vec-map = "1"
thiserror.workspace = true
regex.workspace = true


[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
env_logger = "0.11"
anyhow = "1"

[build-dependencies]
shaderc = "0.8"
