[package]
name = "azalea-inventory"
description = "Representations of various inventory data structures in Minecraft."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
azalea-buf.workspace = true
azalea-chat = { workspace = true, features = ["azalea-buf"] }
azalea-core.workspace = true
azalea-inventory-macros.workspace = true
azalea-registry.workspace = true
indexmap.workspace = true

simdnbt.workspace = true
tracing.workspace = true
uuid.workspace = true
