[package]
description = "Translate Minecraft strings from their id."
edition = "2021"
license = "MIT"
name = "azalea-language"
repository = "https://github.com/azalea-rs/azalea/tree/main/azalea-language"
version = "0.10.3+mc1.21.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
#tokio = { workspace = true, features = ["fs"] }
